// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePage rendering render with Breadcrubs 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ActionConfirmation
    abortAction="No"
    closeModal={[MockFunction]}
    confirmAction="Yes"
    message="This will stop 0 tasks, putting them in the \\"canceled\\" state.  Are you sure?"
    onClick={[Function]}
    showModal={false}
    title="Cancel Selected Tasks"
  />
  <PageLayout
    beforeToolbarComponent={
      <Connect(TasksDashboard)
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
      />
    }
    breadcrumbOptions={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Tasks",
            "url": "/foreman_tasks/tasks",
          },
          Object {
            "caption": "action Name",
            "url": "/foreman_tasks/tasks/someid",
          },
          Object {
            "caption": "Sub tasks",
          },
        ],
      }
    }
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[MockFunction]}
        >
          Cancel Selected
        </Button>
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      cancelSelected={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      hideCancelAllModal={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      isCancelAllModalOpen={false}
      isSubTask={false}
      itemCount={2}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      showCancelAllModal={[MockFunction]}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;

exports[`TasksTablePage rendering render with minimal props 1`] = `
<div
  className="tasks-table-wrapper"
>
  <ActionConfirmation
    abortAction="No"
    closeModal={[MockFunction]}
    confirmAction="Yes"
    message="This will stop 0 tasks, putting them in the \\"canceled\\" state.  Are you sure?"
    onClick={[Function]}
    showModal={false}
    title="Cancel Selected Tasks"
  />
  <PageLayout
    beforeToolbarComponent={
      <Connect(TasksDashboard)
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
      />
    }
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
          onClick={[MockFunction]}
        >
          Cancel Selected
        </Button>
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      cancelSelected={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      hideCancelAllModal={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      isCancelAllModalOpen={false}
      isSubTask={false}
      itemCount={2}
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      showCancelAllModal={[MockFunction]}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;
